[package]
name = "snapshot"
version = "0.1.0"
edition = "2021"
authors = ["Bas van der Hoek <bas@hoek.com>"]
description = "Compare snapshots of web pages"

[dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome" }
failure = "0.1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
url = "2.5.0"
